tests/machine/x/st/string_in_operator.st
" Generated by Mochi compiler v0.10.25 on 2025-07-13T05:07:59Z
"
| s |
s := 'catch'.
Transcript show: (('cat' in s)) printString; cr.
Transcript show: (('dog' in s)) printString; cr.
